# llm-systems-from-scratch

./: .gitignore  CMakeLists.txt  FILE_STRUCTURE.md  README.md
.github/ISSUE_TEMPLATE/: test-file.txt
.github/workflows/: test-file.txt
docs/links/: sources_link.md
docs/phases/: tensor_module.md  test-file.txt
docs/references/: cpp_commands.md  msys2_setup.md  naming_conventions.md  test-file.txt
scripts/: build.sh  format.sh
src/bindings/python/: test-file.txt
src/bindings/wasm/: test-file.txt
src/positional_encoding/: test-file.txt
src/tensor/: CMakeLists.txt  format.hpp  main.cpp  tensor.hpp
